# uml_python

./: 240201_JSON_Test.py  FilterXMLFiles.py  README.md  bw2eb_TEST.py  bw2eb_TEST_NO_FILTER.py  config.ebuilder.example.json  config.ebuilder.json  devToProd.py  ebDashboard.py  ebDashboardV2_beta.py  ebFMP.py  ebTimeAlloc.py  moStat.py  moStatToEB.py  pyproject.toml  requirements.txt  test.ipynb  test_auth.py  test_eb_auth.py  test_endpoints.py
.github/: copilot-instructions.md
CommitmentChangeOrders/: CommitmentChangeOrders.html  CommitmentChangeOrders.xlsx  commitmentChangeOrders.py
bw2eb/: bw2eb.py  bw2ebJoined.py  bw2ebXML.py  bw2ebXMLJoined.py  bw2eb_OLD.py
eb/ebInv/: InvXML2HTML.py  InvoiceCostXMLtoExcelExport.py  translate_BW_Invoices.py  write_Invoice_Cost_line.py  write_Invoice_Process_line.py
eb/ebPO/: POCostXMLtoExcelExport.py  translate_BW_POs.py  xmlTester.py  (+9 more)
ebDataToSQL/: API_to_SQL.py  Rev_API_to_SQL.py  createTables.py  insertAndUpdateTables.py  run_at_startup.bat
sampleData/: 231127 Header Notes example.csv  Book1.csv  Jaggaer_PO_L001501948_EXTERNAL_NOTE.xml  sampledata.csv  transaction_export_po_search_POData-1958733281.csv
uml_lib/: FilterXMLFiles.py  bwFilter.py  dailyDataImport.py  daily_justFundingSources.py  eb2bw_libV2.py  ebAPI_config.py  ebAPI_lib.py  ebAPI_libv1.py  ebAPI_response.py  ebAPI_tokenresponse.py  ebCostLib.py  ebHTML.py  ebSQLlib.py  filter_PO_and_Invoice_XMLs.py  projects_table3.css  projects_table3.js  table3.css  table3.js  web_lib.py  web_lib_SCHED DETAIL.py
workorder/: WorkOrderUpdater.html  workOrderReport.py
(+3 files in other folders)
